<resources>
    <string name="app_name">Errand-Helper</string>
    <string name="create_task">Create a task</string>
    <string name="select_task">Do a task</string>
    <string name="my_task">My tasks</string>
    <string name="welcome">Welcome,</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="tutorial">Tutorial Video</string>
    <string name="retypepass">Re-type Password</string>
    <string name="phone">Contact number</string>
    <string name="postnewtask">Post a new task</string>
    <string name="taskdescription">Task Description</string>
    <string name="tasktype">Task Type</string>
    <string name="taskname">Task Name</string>
    <string name="submittask">Post task</string>
    <string name="selecttask">Do a Task</string>
    <string name="exampletask">Example Task</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="task_todo">TO-DO LIST</string>
    <string name="title_activity_task_create">Create a task</string>
    <string name="title_activity_task_select">Do a task</string>
    <string name="due_date">Due date</string>
    <string name="due_time">Due time</string>
    <string name="pick_due_time">Pick a time</string>
    <string name="pick_due_date">Pick a date</string>
    <string name="price">Willing to pay (Price)</string>


    <string-array name = "task_types">

        <item> Moving help </item>
        <item> Ride </item>
        <item> Delivery </item>
        <item> Cleaning </item>
        <item> Other </item>

    </string-array>
    <string name="title_activity_home_page">Home Page</string>
    <string name="emptyString" />
    <string name="title_activity_video_tutorial">Video Tutorial</string>
    <string name="title_activity_task_my">My Task</string>
    <string name="title_activity_task_to_do">TaskToDo</string>

    <string name="hello_world">Hello world!</string>
</resources>
