<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context="com.example.snr.errand_helper.TaskCreate"
    android:id="@+id/button">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_task_name"
        android:hint="@string/taskname"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tasktype"
        android:id="@+id/tv_task_type"
        android:layout_below="@+id/et_task_desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_task_type"
        android:entries="@array/task_types"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_task_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"> </Spinner>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_task_desc"
        android:hint="@string/taskdescription"
        android:layout_below="@+id/et_task_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/submittask"
        android:id="@+id/btn_submit_task"
        android:onClick="onButtonClick"
        android:backgroundTint="#cdd0ff"
        android:clickable="true"
        android:textColor="#507EBA"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/et_price"
        android:id="@+id/date">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/due_date"
            android:layout_gravity="top|bottom"
            android:textAlignment="inherit"
            android:textIsSelectable="true"
            android:textSize="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.39"
            android:id="@+id/dateString" />

        <Button
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_due_date"
            android:onClick="showDatePickerDialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/time">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/due_time"
            android:textIsSelectable="true"
            android:textSize="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/timeString" />

        <Button
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_due_time"
            android:onClick="showTimePickerDialog" />
    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_price"
        android:hint="@string/price"
        android:layout_below="@+id/sp_task_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
