<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context="com.example.snr.errand_helper.HomePage">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_post_task"
        android:text="@string/create_task"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/TVusername"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_task"
        android:id="@+id/btn_browse_task"
        android:layout_below="@+id/btn_post_task"
        android:layout_alignLeft="@+id/btn_post_task"
        android:layout_alignStart="@+id/btn_post_task"
        android:layout_alignRight="@+id/btn_post_task"
        android:layout_alignEnd="@+id/btn_post_task" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_task"
        android:id="@+id/btn_my_task"
        android:layout_below="@+id/btn_browse_task"
        android:layout_alignLeft="@+id/btn_post_task"
        android:layout_alignStart="@+id/btn_post_task"
        android:layout_alignRight="@+id/btn_browse_task"
        android:layout_alignEnd="@+id/btn_browse_task" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_todo"
        android:id="@+id/btn_task_todo"
        android:layout_below="@+id/btn_my_task"
        android:layout_alignLeft="@+id/btn_post_task"
        android:layout_alignStart="@+id/btn_post_task"
        android:layout_alignRight="@+id/btn_browse_task"
        android:layout_alignEnd="@+id/btn_browse_task" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="User"
        android:id="@+id/TVusername"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
