<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_color"
    android:id="@+id/button">



    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:onClick="onButtonClick"
        android:backgroundTint="#cdd0ff"
        android:textColor="#507EBA"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_below="@+id/tf_password"
        android:layout_alignLeft="@+id/btn_signup"
        android:layout_alignStart="@+id/btn_signup"
        android:layout_marginTop="82dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:hint = "Email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />




    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/tf_password"
        android:hint = "Password"
        android:layout_below="@+id/et_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <Button
        android:text="@string/signup"
        android:id="@+id/btn_signup"
        android:onClick="onButtonClick"
        android:backgroundTint="#cdd0ff"
        android:textColor="#507EBA"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignLeft="@+id/btutorial"
        android:layout_alignStart="@+id/btutorial" />

    <Button

        android:text="@string/tutorial"
        android:id="@+id/btutorial"
        android:onClick="onButtonClick"
        android:backgroundTint="#cdd0ff"
        android:clickable="true"
        android:textColor="#507EBA"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/btn_signup"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
